2007-12-20  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.0 ===

2007-11-08  Matthias Clasen <mclasen@redhat.com>

	* gmodule.c: Include glibconfig.h before checking G_OS_WIN32.

2007-11-07  Matthias Clasen <mclasen@redhat.com>

	* *.c: Make header include order consistent (#71704,
	Diego Escalante Urrelo)

2007-11-07  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.14.3 ===

2007-10-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.2 ===

2007-09-19  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.1 ===

2007-08-03  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.0 ===

2007-07-12  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.7 ===

2007-07-09  Matthias Clasen  <mclasen@redhat.com>

	* gmodule.c (g_module_open): Include the module file 
	name to the error message given when module initialization 
	fails.  (#445813, Gustavo Carneiro)

Fri Jun 29 2007  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.6 ===

2007-06-18  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.5 ===

2007-06-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.4 ===

2007-06-04  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.13.3 ===

2007-05-22  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.2 ===

2007-05-03  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.13.1 ===

2007-03-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.0 ===

2007-01-19  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (gmodule-2.0.lib): Use $(srcdir) for builds outside
	srcdir.

2006-12-31  Matthias Clasen  <mclasen@redhat.com>

	* gmodule.c: Fix include order for win32. (#390943, 
	Kazuki Iwamoto)

2006-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gmodule.c: Clean up includes.

2006-12-13  Matthias Clasen  <mclasen@redhat.com>

	* gmodule.c (g_module_open):
	* gmodule-dl.c (_g_module_symbol): Handle valid symbols
	that are NULL correctly.  (#385388, Felix Kater)
