@@ -1,3 +1,8 @@
+2007-12-22  Matthias Clasen  <mclasen@redhat.com>
+
+	* gmodule.c (g_module_open): Don't fail to load modules
+	with suffix .la.  (#480122, Andrey Tsyvarev)
+
 2007-12-20  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.15.0 ===
